- DID IT. cleaned up the code a bit to be more dry~ - also added a fixed position to the wrapper so a horizontal scroll bar doesn't appear

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 #wrapper {
 	width: 100%;
 	height: 100%;
+	position: fixed;
 }
 
 #ground {
